math/vec4.h

/* ============================================================================
 * ESTRUTURAS
 * ============================================================================
 */

/**
 * struct bhs_vec4 - Vetor 4D em espaço-tempo
 * @t: componente temporal (x^0)
 * @x: componente espacial x (x^1)
 * @y: componente espacial y (x^2)
 * @z: componente espacial z (x^3)
 *
 * Pode representar:
 * - Posição 4D (evento no espaço-tempo)
 * - 4-velocidade (u^μ = dx^μ/dτ)
 * - 4-momento (p^μ = m*u^μ)
 * - Qualquer 4-vetor contravariante
 */
struct bhs_vec4 {
	real_t t;
	real_t x;
	real_t y;
	real_t z;
};