engine/engine.h

/* ============================================================================
 * ENGINE LIFECYCLE
 * ============================================================================
 */

/**
 * bhs_engine_init - Inicializa subsistemas (Memory, ECS, Physics)
 * 
 * Deve ser chamado antes de qualquer outra funcao da engine.
 */
void bhs_engine_init(void);
/**
 * bhs_engine_shutdown - Libera todos os recursos
 */
void bhs_engine_shutdown(void);
/**
 * bhs_engine_update - Avanca a simulacao
 * @dt: Delta time em segundos (step fixo recomendado para fisica)
 *
 * Executa:
 * 1. Physics System (Integrator)
 * 2. Spacetime System (Metric Updates)
 * 3. Script/Game Logic Systems
 */
void bhs_engine_update(double dt);