python/riengine.py

    if hasattr(_lib, 'bhs_ecs_update_metadata'):
        bhs_ecs_update_metadata = _lib.bhs_ecs_update_metadata
        bhs_ecs_update_metadata.argtypes = [ctypes.POINTER('const char'), ctypes.POINTER('const void'), ctypes.c_size_t, ctypes.c_uint32]
        bhs_ecs_update_metadata.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_ecs_update_metadata not found in library')
    # fprint f
    if hasattr(_lib, 'f'):
        f = _lib.f
        f.argtypes = ['stderr', '"', '__FILE__', '__LINE__', '\']
        f.restype = 'fprint'
    else:
        print(f'Warning: Function f not found in library')
    # abor t
    if hasattr(_lib, 't'):
        t = _lib.t
        t.argtypes = []
        t.restype = 'abor'
    else:
        print(f'Warning: Function t not found in library')
    # fprint f
    if hasattr(_lib, 'f'):
        f = _lib.f
        f.argtypes = ['stderr', '"', '\', '__LINE__']
        f.restype = 'fprint'
    else:
        print(f'Warning: Function f not found in library')
    # abor t
    if hasattr(_lib, 't'):
        t = _lib.t
        t.argtypes = []
        t.restype = 'abor'
    else:
        print(f'Warning: Function t not found in library')
    # bhs_metric bhs_metric_zero
    if hasattr(_lib, 'bhs_metric_zero'):
        bhs_metric_zero = _lib.bhs_metric_zero
        bhs_metric_zero.argtypes = []
        bhs_metric_zero.restype = 'bhs_metric'
    else:
        print(f'Warning: Function bhs_metric_zero not found in library')
    # bhs_metric bhs_metric_minkowski
    if hasattr(_lib, 'bhs_metric_minkowski'):
        bhs_metric_minkowski = _lib.bhs_metric_minkowski
        bhs_metric_minkowski.argtypes = []
        bhs_metric_minkowski.restype = 'bhs_metric'
    else:
        print(f'Warning: Function bhs_metric_minkowski not found in library')
    # bhs_metric bhs_metric_diag
    if hasattr(_lib, 'bhs_metric_diag'):
        bhs_metric_diag = _lib.bhs_metric_diag
        bhs_metric_diag.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
        bhs_metric_diag.restype = 'bhs_metric'
    else:
        print(f'Warning: Function bhs_metric_diag not found in library')
    # bool bhs_metric_is_symmetric
    if hasattr(_lib, 'bhs_metric_is_symmetric'):
        bhs_metric_is_symmetric = _lib.bhs_metric_is_symmetric
        bhs_metric_is_symmetric.argtypes = [ctypes.POINTER('const struct bhs_metric'), ctypes.c_double]
        bhs_metric_is_symmetric.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_metric_is_symmetric not found in library')
    # real_t bhs_metric_det
    if hasattr(_lib, 'bhs_metric_det'):
        bhs_metric_det = _lib.bhs_metric_det
        bhs_metric_det.argtypes = [ctypes.POINTER('const struct bhs_metric')]
        bhs_metric_det.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_metric_det not found in library')
    # int bhs_metric_invert
    if hasattr(_lib, 'bhs_metric_invert'):
        bhs_metric_invert = _lib.bhs_metric_invert
        bhs_metric_invert.argtypes = [ctypes.POINTER('const struct bhs_metric'), ctypes.POINTER(bhs_metric)]
        bhs_metric_invert.restype = ctypes.c_int
    else:
        print(f'Warning: Function bhs_metric_invert not found in library')
    # bhs_vec4 bhs_metric_lower
    if hasattr(_lib, 'bhs_metric_lower'):
        bhs_metric_lower = _lib.bhs_metric_lower
        bhs_metric_lower.argtypes = [ctypes.POINTER('const struct bhs_metric'), bhs_vec4]
        bhs_metric_lower.restype = 'bhs_vec4'
    else:
        print(f'Warning: Function bhs_metric_lower not found in library')
    # bhs_vec4 bhs_metric_raise
    if hasattr(_lib, 'bhs_metric_raise'):
        bhs_metric_raise = _lib.bhs_metric_raise
        bhs_metric_raise.argtypes = [ctypes.POINTER('const struct bhs_metric'), bhs_vec4]
        bhs_metric_raise.restype = 'bhs_vec4'
    else:
        print(f'Warning: Function bhs_metric_raise not found in library')
    # real_t bhs_metric_dot
    if hasattr(_lib, 'bhs_metric_dot'):
        bhs_metric_dot = _lib.bhs_metric_dot
        bhs_metric_dot.argtypes = [ctypes.POINTER('const struct bhs_metric'), bhs_vec4, bhs_vec4]
        bhs_metric_dot.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_metric_dot not found in library')
    # int bhs_christoffel_compute
    if hasattr(_lib, 'bhs_christoffel_compute'):
        bhs_christoffel_compute = _lib.bhs_christoffel_compute
        bhs_christoffel_compute.argtypes = ['bhs_metric_func', bhs_vec4, ctypes.c_void_p, ctypes.c_double, ctypes.POINTER(bhs_christoffel)]
        bhs_christoffel_compute.restype = ctypes.c_int
    else:
        print(f'Warning: Function bhs_christoffel_compute not found in library')
    # bhs_christoffel bhs_christoffel_zero
    if hasattr(_lib, 'bhs_christoffel_zero'):
        bhs_christoffel_zero = _lib.bhs_christoffel_zero
        bhs_christoffel_zero.argtypes = []
        bhs_christoffel_zero.restype = 'bhs_christoffel'
    else:
        print(f'Warning: Function bhs_christoffel_zero not found in library')
    # bhs_vec4 bhs_geodesic_accel
    if hasattr(_lib, 'bhs_geodesic_accel'):
        bhs_geodesic_accel = _lib.bhs_geodesic_accel
        bhs_geodesic_accel.argtypes = [ctypes.POINTER('const struct bhs_christoffel'), bhs_vec4]
        bhs_geodesic_accel.restype = 'bhs_vec4'
    else:
        print(f'Warning: Function bhs_geodesic_accel not found in library')
    # co s
    if hasattr(_lib, 's'):
        s = _lib.s
        s.argtypes = ['theta']
        s.restype = 'co'
    else:
        print(f'Warning: Function s not found in library')
    # double bhs_kerr_horizon_outer
    if hasattr(_lib, 'bhs_kerr_horizon_outer'):
        bhs_kerr_horizon_outer = _lib.bhs_kerr_horizon_outer
        bhs_kerr_horizon_outer.argtypes = [ctypes.POINTER('const struct bhs_kerr')]
        bhs_kerr_horizon_outer.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_kerr_horizon_outer not found in library')
    # double bhs_kerr_horizon_inner
    if hasattr(_lib, 'bhs_kerr_horizon_inner'):
        bhs_kerr_horizon_inner = _lib.bhs_kerr_horizon_inner
        bhs_kerr_horizon_inner.argtypes = [ctypes.POINTER('const struct bhs_kerr')]
        bhs_kerr_horizon_inner.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_kerr_horizon_inner not found in library')
    # double bhs_kerr_ergosphere
    if hasattr(_lib, 'bhs_kerr_ergosphere'):
        bhs_kerr_ergosphere = _lib.bhs_kerr_ergosphere
        bhs_kerr_ergosphere.argtypes = [ctypes.POINTER('const struct bhs_kerr'), ctypes.c_double]
        bhs_kerr_ergosphere.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_kerr_ergosphere not found in library')
    # double bhs_kerr_isco
    if hasattr(_lib, 'bhs_kerr_isco'):
        bhs_kerr_isco = _lib.bhs_kerr_isco
        bhs_kerr_isco.argtypes = [ctypes.POINTER('const struct bhs_kerr'), ctypes.c_bool]
        bhs_kerr_isco.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_kerr_isco not found in library')
    # double bhs_kerr_omega_frame
    if hasattr(_lib, 'bhs_kerr_omega_frame'):
        bhs_kerr_omega_frame = _lib.bhs_kerr_omega_frame
        bhs_kerr_omega_frame.argtypes = [ctypes.POINTER('const struct bhs_kerr'), ctypes.c_double, ctypes.c_double]
        bhs_kerr_omega_frame.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_kerr_omega_frame not found in library')
    # void bhs_kerr_metric
    if hasattr(_lib, 'bhs_kerr_metric'):
        bhs_kerr_metric = _lib.bhs_kerr_metric
        bhs_kerr_metric.argtypes = [ctypes.POINTER('const struct bhs_kerr'), ctypes.c_double, ctypes.c_double, ctypes.POINTER(bhs_metric)]
        bhs_kerr_metric.restype = None
    else:
        print(f'Warning: Function bhs_kerr_metric not found in library')
    # void bhs_kerr_metric_inverse
    if hasattr(_lib, 'bhs_kerr_metric_inverse'):
        bhs_kerr_metric_inverse = _lib.bhs_kerr_metric_inverse
        bhs_kerr_metric_inverse.argtypes = [ctypes.POINTER('const struct bhs_kerr'), ctypes.c_double, ctypes.c_double, ctypes.POINTER(bhs_metric)]
        bhs_kerr_metric_inverse.restype = None
    else:
        print(f'Warning: Function bhs_kerr_metric_inverse not found in library')
    # double bhs_kerr_redshift_zamo
    if hasattr(_lib, 'bhs_kerr_redshift_zamo'):
        bhs_kerr_redshift_zamo = _lib.bhs_kerr_redshift_zamo
        bhs_kerr_redshift_zamo.argtypes = [ctypes.POINTER('const struct bhs_kerr'), ctypes.c_double, ctypes.c_double]
        bhs_kerr_redshift_zamo.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_kerr_redshift_zamo not found in library')
    # void bhs_kerr_metric_func
    if hasattr(_lib, 'bhs_kerr_metric_func'):
        bhs_kerr_metric_func = _lib.bhs_kerr_metric_func
        bhs_kerr_metric_func.argtypes = [bhs_vec4, ctypes.c_void_p, ctypes.POINTER(bhs_metric)]
        bhs_kerr_metric_func.restype = None
    else:
        print(f'Warning: Function bhs_kerr_metric_func not found in library')
    # void bhs_schwarzschild_metric
    if hasattr(_lib, 'bhs_schwarzschild_metric'):
        bhs_schwarzschild_metric = _lib.bhs_schwarzschild_metric
        bhs_schwarzschild_metric.argtypes = [ctypes.POINTER('const struct bhs_schwarzschild'), ctypes.c_double, ctypes.c_double, ctypes.POINTER(bhs_metric)]
        bhs_schwarzschild_metric.restype = None
    else:
        print(f'Warning: Function bhs_schwarzschild_metric not found in library')
    # void bhs_schwarzschild_metric_inverse
    if hasattr(_lib, 'bhs_schwarzschild_metric_inverse'):
        bhs_schwarzschild_metric_inverse = _lib.bhs_schwarzschild_metric_inverse
        bhs_schwarzschild_metric_inverse.argtypes = [ctypes.POINTER('const struct bhs_schwarzschild'), ctypes.c_double, ctypes.c_double, ctypes.POINTER(bhs_metric)]
        bhs_schwarzschild_metric_inverse.restype = None
    else:
        print(f'Warning: Function bhs_schwarzschild_metric_inverse not found in library')
    # double bhs_schwarzschild_redshift
    if hasattr(_lib, 'bhs_schwarzschild_redshift'):
        bhs_schwarzschild_redshift = _lib.bhs_schwarzschild_redshift
        bhs_schwarzschild_redshift.argtypes = [ctypes.POINTER('const struct bhs_schwarzschild'), ctypes.c_double]
        bhs_schwarzschild_redshift.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_schwarzschild_redshift not found in library')
    # double bhs_schwarzschild_escape_velocity
    if hasattr(_lib, 'bhs_schwarzschild_escape_velocity'):
        bhs_schwarzschild_escape_velocity = _lib.bhs_schwarzschild_escape_velocity
        bhs_schwarzschild_escape_velocity.argtypes = [ctypes.POINTER('const struct bhs_schwarzschild'), ctypes.c_double]
        bhs_schwarzschild_escape_velocity.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_schwarzschild_escape_velocity not found in library')
    # void bhs_schwarzschild_metric_func
    if hasattr(_lib, 'bhs_schwarzschild_metric_func'):
        bhs_schwarzschild_metric_func = _lib.bhs_schwarzschild_metric_func
        bhs_schwarzschild_metric_func.argtypes = [bhs_vec4, ctypes.c_void_p, ctypes.POINTER(bhs_metric)]
        bhs_schwarzschild_metric_func.restype = None
    else:
        print(f'Warning: Function bhs_schwarzschild_metric_func not found in library')
    # void bhs_engine_init
    if hasattr(_lib, 'bhs_engine_init'):
        bhs_engine_init = _lib.bhs_engine_init
        bhs_engine_init.argtypes = []
        bhs_engine_init.restype = None
    else:
        print(f'Warning: Function bhs_engine_init not found in library')
    # void bhs_engine_shutdown
    if hasattr(_lib, 'bhs_engine_shutdown'):
        bhs_engine_shutdown = _lib.bhs_engine_shutdown
        bhs_engine_shutdown.argtypes = []
        bhs_engine_shutdown.restype = None
    else:
        print(f'Warning: Function bhs_engine_shutdown not found in library')
    # void bhs_engine_update
    if hasattr(_lib, 'bhs_engine_update'):
